[package]
name = "moist"
version = "0.1.0"
authors = ["Tim Smaill <timsmaill213@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
ili9341 = { git = "https://github.com/yuri91/ili9341-rs.git", branch = "master", features=["graphics"] }
embedded-hal = "0.2.3"
embedded-graphics="0.7.1"
display-interface-spi = "0.4.1"
heapless = "0.7.7"
profont = "0.5.0"

[dependencies.stm32f4xx-hal]
version = "0.9.0"
features = ["stm32f429", "rt"]